# Copilotkit-threads

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.changeset/: agent-check.md  calm-hooks-listen.md  config.json  fuzzy-threads-v4.md  initial-release.md  modern-thread-platform.md  native-runtime-images.md
.github/workflows/: ci.yml  release-pr.yml  release.yml
apps/runtime/: CHANGELOG.md  Dockerfile  package.json
apps/runtime/src/: admin-api.ts  agent-admin-cli.ts  agent-policy.ts  agent-registry.ts  auth.ts  config.ts  db.ts  http-api.ts  (+16 more)
docs/: AGENT_CONTRACT.md  ARCHITECTURE_V4_PROPOSAL.md  CONSUMER_QUICKSTART.md  RELEASING.md  THREAD_SERVICE_GUIDE.md  V3_MIGRATION.md  V4_MIGRATION.md  openapi.yaml
examples/consumer-starter/: .env.example  README.md  compose.yaml
examples/langgraph-agent/: Dockerfile  pyproject.toml
examples/langgraph-agent/app/: access_log.py  config.py  graph.py  main.py  migrate.py  tools.py
examples/langgraph-agent/tests/: test_access_log.py  test_graph.py  test_tools.py
examples/nextjs-copilotkit/: Dockerfile  README.md  next.config.ts  package.json  tsconfig.json
infra/postgres/: 001_agent_core.sql  001_thread_platform_v4.sql  002_remove_internal_title_messages.sql  003_thread_ownership.sql  004_title_jobs.sql  005_thread_service_hardening.sql  006_platform_v3.sql
scripts/: smoke-v4-multi-instance.mjs  smoke-v4.mjs  sync-release-version.mjs
tests/load/: k6-small.js
(+52 files in other folders)
