[project]
name = "thread-platform-example-agent"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
  "ag-ui-langgraph[fastapi]==0.0.42",
  "langchain-openai==1.3.5",
  "langgraph==1.2.9",
  "langgraph-checkpoint-postgres==3.1.0",
  "psycopg[binary,pool]==3.3.4",
  "pydantic-settings==2.14.2",
  "uvicorn[standard]==0.41.0",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "ruff==0.15.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
